--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"start:watch": "node node_modules/nodemon/bin/nodemon.js src/server.js"
 	},
 	"dependencies": {
+		"m3u8-stream-list": "^1.1.0",
 		"request": "^2.88.0",
 		"request-promise": "^4.2.4",
 		"stremio-addon-sdk": "1.1.x"
