--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "stremio-dlive-addon",
 	"version": "0.0.1",
-	"description": "View streams from dlive.tv",
+	"description": "View livestreams from dlive.tv",
 	"scripts": {
 		"start": "node src/server.js",
 		"start:watch": "node node_modules/nodemon/bin/nodemon.js src/server.js"
@@ -10,7 +10,7 @@
 		"m3u8-stream-list": "^1.1.0",
 		"request": "^2.88.0",
 		"request-promise": "^4.2.4",
-		"stremio-addon-sdk": "1.1.x"
+		"stremio-addon-sdk": "^1.2.0"
 	},
 	"devDependencies": {
 		"nodemon": "^1.18.11"
